--- a/BookStoreLIB.csproj
+++ b/BookStoreLIB.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{C4C7E4A2-AC57-47C5-8CD2-2A46331E269D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LoginPageUnitTest</RootNamespace>
-    <AssemblyName>LoginPageUnitTest</AssemblyName>
+    <RootNamespace>BookStoreLIB</RootNamespace>
+    <AssemblyName>BookStoreLIB</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,7 +50,9 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DALUserInfo.cs" />
+    <Compile Include="BookCatalog.cs" />
+    <Compile Include="BookOrder.cs" />
+    <Compile Include="OrderItem.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -67,6 +69,12 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BookStoreDATA\BookStoreDATA.csproj">
+      <Project>{1c5fdaab-4ed2-4054-8dfe-a0ea0a53c1ec}</Project>
+      <Name>BookStoreDATA</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
